--- a/landing.css
+++ b/landing.css
@@ -19,16 +19,17 @@ body{
 .header{
     color: white;
     display: flex;
-    justify-content: space-around;
-    width: 20em;
-    margin-left: 50em;
+    justify-content: flex-end;
+    gap: 5em;
+    margin-right: 2em;
     margin-top: -5em;
 }
+
 .writings {
     display: flex;
+    
     color: white;
     flex-wrap: wrap;
-    flex-direction: column;
     margin-top: 2em;
     margin-right: 45em;
     margin-left: 1em;
@@ -74,6 +75,7 @@ body{
 }
 .pictures{
     display: flex;
+    flex-wrap: wrap;
     margin-left: 1em;
     height: 50em;
     align-items: center;
@@ -100,27 +102,19 @@ body{
 }
 .lu{
     font-size: 1.5em;
-    margin-top: -10em;
     width: 10em;
-    margin-left: 4.5em;
 }
 .la{
     font-size: 1.5em;
-    margin-top: -10em;
     width: 10em;
-    margin-left: 17.5em;
 }
 .bea{
     font-size: 1.5em;
-    margin-top: -10em;
     width: 10em;
-    margin-left: 30.5em;
 }
 .mi{
     font-size: 1.5em;
-    margin-top: -10em;
     width: 10em;
-    margin-left: 43.5em;
 }
 .luffy:hover{
     transform: scale(1.3);
